# systems-programming

./: .gitignore  README.md
assembly/book_low-level-programming/: .gitignore  README.md  gdb_notes.md
assembly/book_low-level-programming/ch_2/: build.sh  false.asm  hello.asm  notes.md  strlen.asm
assembly/book_low-level-programming/ch_2/io_library/: lib.inc  print_string  print_string.asm  string_length  string_length.asm  test.py
assembly/book_low-level-programming/ch_2/practice/: hello  print-rax.asm  print_call.asm
assembly/mips/: fib_recursive.s  first1pos.s  hello_world.s  listmanips.s  nchoosek.s  print_strings.s
assembly/nand2tetris/: .gitignore  Pipfile  pasm.code-workspace  pasm.py
assembly/tutorialspoint/: .gitignore  README.md  change_name.asm  hello.asm  notes.md
c/beargit/: .gitignore  beargit.c  main.c  notes.md
c/beargit2/: Makefile  beargit.c
c/lalg/: CMakeLists.txt  main.c
c/lalg/lib/: error.c  error.h  includes.h  vector.c  vector.h
c/mips_assembler/: Makefile  assembler.h  test_assembler.c
c/mips_assembler/src/: include.h  tables.c  tables.h  translate.c  translate.h  translate_utils.c  translate_utils.h  utils.c
c/misc/: print_bits.c
c/ncurses/: CMakeLists.txt  build  build.sh  main.c
c/ncurses/src/: framebuffer.c  main.c  sandbox.c  utils.c  window.c
c/ncurses/src/include/: common.h  framebuffer.h  sandbox.h  utils.h  window.h
rust/minigrep/: Cargo.toml
rust/minigrep/src/: lib.rs
rust/misc/: Cargo.toml
rust/misc/src/: main.rs
